# rust-service-boiler-plate

./: Cargo.toml  start-trash-db.sh
migrations/: 20231204215217_create_registrations.sql
src/: cli.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  registrations.rs
tests/: health_check.rs  test_routes.rs  testdatabase.rs
