[package]
name = "registration"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "flutlicht-anmeldung-registration-service"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
hyper = "0.14.27"
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7", features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio",
] }
config = "0.13"
clap = { version = "4.4.10", features = ["derive", "env"] }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
postgres = "0.19.7"

[dev-dependencies]
reqwest = "0.11"
